--- a/master.css
+++ b/master.css
@@ -28,3 +28,27 @@
 	text-align: center;
 	padding: 5px;
 }
+
+#rad{
+	float: left;
+}
+
+#colors{
+	float: right;
+}
+
+.swatch{
+	width: 30px;
+	height: 30px;
+	border-radius: 15px;
+	box-shadow: inset 0px 1px 0px rgba(255, 255 ,255 , 0.5), 0px, 2px, 2px rgba(0, 255, 255, 0.5);
+	display: inline-block;
+	margin-left: 10px;
+	background-color: cyan;
+	
+}
+
+.swatch.active{
+	border: 2px solid white;
+	box-shadow: inset 0px 1px 2px rgba(0, 0 ,0 , 0.5);
+}
